# razorbill

./: .gitignore  main.py  pyproject.toml
razorbill/: _types.py  builder.py  converter.py  crud.py  deps.py  model.py  router.py  utils.py
razorbill/_templates_/: config.py  crud.py  routes.py  schemes.py
razorbill/connectors/: alchemy.py  base.py  memory.py
razorbill/connectors/alchemy/: alchemy.py
razorbill/crud/: base.py
razorbill/razorbill/: converter.py  deps.py  model.py  router.py
razorbill/razorbill/_templates_/: deps.py
razorbill/razorbill/connectors/: alchemy.py  base.py
razorbill/razorbill/crud/: base.py
tests/: conftest.py  models.py  schemas.py  test_count.py  test_create.py  test_delete.py  test_get_many.py  test_get_one.py  test_update.py  unit_test.py
tests/custom/tests/: db.py  models.py
tests/test_alchemy/: test_alchemy_count.py  test_alchemy_create.py  test_alchemy_delete.py  test_alchemy_get_many.py  test_alchemy_get_one.py  test_alchemy_update.py
tests/test_inmemory/: __init__.py  test_inmemory_count.py  test_inmemory_create.py  test_inmemory_delete.py  test_inmemory_get_many.py  test_inmemory_get_one.py  test_inmemory_update.py
